Join view added

--- a/src/assets/sass/main.sass
+++ b/src/assets/sass/main.sass
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap')
 $family-cursive: "Pacifico", cursive
 $family-primary: $family-cursive
+$family-sans-serif: "Helvetica", "Arial", sans-serif 
+$family-secondary: $family-sans-serif
 $red: hsl(348, 86%, 61%)
 $primary: $red
 @import '~bulma/bulma'
